@@ -1,7 +1,10 @@
 [output]
 name:      g_land.100a.nc
 frequency: 100
-variables: THK TOPG
+variables: THK TOPG ABLT_SPOT ACAB_SPOT DIFFU_SPOT TEMP_SPOT
+numspot:   4
+spotx:     40 10 60 20 
+spoty:     70 10 30 100 
 
 [output]
 name:      g_land.1000a.nc
