@@ -2,6 +2,7 @@
 an_int  : 1
 a_float = 2.0
 a_char  = hey, this is rather cool
+an_array = 10. 20. -10. 40. 100.
 
 [another section]
 stuff : 1+2
